2014-05-16  Axel Wachtler <axel@uracoli.de>

	* arduino.c: Replacing all occurences of fprintf(stderr,...) with avrdude_message(...)
	in potential library functions.
	* avr910.c: (Dito.)
	* avr.c: (Dito.)
	* avrdude.h: (Dito.)
	* avrftdi.c: (Dito.)
	* avrftdi_private.h: (Dito.)
	* avrpart.c: (Dito.)
	* bitbang.c: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* config.c: (Dito.)
	* config_gram.y: (Dito.)
	* dfu.c: (Dito.)
	* fileio.c: (Dito.)
	* flip1.c: (Dito.)
	* flip2.c: (Dito.)
	* ft245r.c: (Dito.)
	* jtag3.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* lexer.l: (Dito.)
	* linuxgpio.c: (Dito.)
	* linux_ppdev.h: (Dito.)
	* main.c: (Dito.)
	* par.c: (Dito.)
	* pgm.c: (Dito.)
	* pickit2.c: (Dito.)
	* pindefs.c: (Dito.)
	* ppi.c: (Dito.)
	* ppiwin.c: (Dito.)
	* safemode.c: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* serbb_posix.c: (Dito.)
	* serbb_win32.c: (Dito.)
	* ser_posix.c: (Dito.)
	* ser_win32.c: (Dito.)
	* stk500.c: (Dito.)
	* stk500generic.c: (Dito.)
	* stk500v2.c: (Dito.)
	* term.c: (Dito.)
	* update.c: (Dito.)
	* usbasp.c: (Dito.)
	* usb_libusb.c: (Dito.)
	* usbtiny.c: (Dito.)
	* wiring.c: (Dito.)

2014-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version, add libtool hooks
	* Makefile.am: First attempt to define building a shared library
	(not to be installed by now)

2014-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* dfu.c (dfu_open, dfu_init): Fix signature of the dummy functions
	(in the !HAVE_LIBUSB case) to match prototypes.

2014-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c: Replace all occurences of exit() in potential library
	functions by appropriate return values
	* avrftdi.c: (Dito.)
	* bitbang.c: (Dito.)
	* bitbang.h: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* config.c: (Dito.)
	* flip2.c: (Dito.)
	* ft245r.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* linuxgpio.c: (Dito.)
	* main.c: (Dito.)
	* par.c: (Dito.)
	* pgm.c: (Dito.)
	* pickit2.c: (Dito.)