@@ -32,6 +32,7 @@ AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR([main.c])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS(ac_cfg.h)
+AC_CONFIG_MACRO_DIR([m4])
 
 LT_INIT()
 
